--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
     <section id="projects" class="gallery">
       <div class="container-fluid">
 
-        <div class="d-flex flex-column justify-content-center align-items-center"><h2>My projects</h2></div>
+        <div class="d-flex flex-column justify-content-center align-items-center"><h2>My projects & Certificate</h2></div>
 
 
         <div class="row gy-4 justify-content-center view3__content">
