update link shopee
update link shopee

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             </div>
             <div class="col-lg-6">
               <ul>
-                <li><i class="bi bi-building"></i> <strong>Current City:</strong> <span>Ho Chi Minh Ct</span></li>
+                <li><i class="bi bi-building"></i> <strong>Current City:</strong> <span>Ho Chi Minh City</span></li>
                 <li><i class="bi bi-book"></i> <strong>Education:</strong> <span>Ton Duc Thang University</span></li>
                 <li><i class="bi bi-pen"></i> <strong>Major:</strong> <span> Software Engineer</span></li>
                 <li><i class="bi bi-person-workspace"></i> <strong>Experience:</strong> <span>None</span></li>
