--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@
                 <li><i class="bi bi-building"></i> <strong>Current City:</strong> <span>Ho Chi Minh City</span></li>
                 <li><i class="bi bi-book"></i> <strong>Education:</strong> <span>Ton Duc Thang University</span></li>
                 <li><i class="bi bi-pen"></i> <strong>Major:</strong> <span> Software Engineer</span></li>
-                <li><i class="bi bi-person-workspace"></i> <strong>Experience:</strong> <span>None</span></li>
-                <li><i class="bi bi-house-door"></i> <strong>Company:</strong> <span>Not yet</span></li>
+                <li><i class="bi bi-person-workspace"></i> <strong>Experience:</strong> <span>a year</span></li>
+                <li><i class="bi bi-house-door"></i> <strong>Company:</strong> <span><a href="https://hanbiro.vn/"> Hanbiro</a></span></li>
               </ul>
             </div>
           </div>
