--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@
               <ul>
                 <li><i class="bi bi-building"></i> <strong>Current City:</strong> <span>Ho Chi Minh City</span></li>
                 <li><i class="bi bi-book"></i> <strong>Education:</strong> <span>Ton Duc Thang University</span></li>
-                <li><i class="bi bi-pen"></i> <strong>Major:</strong> <span> Software Engineer</span></li>
-                <li><i class="bi bi-person-workspace"></i> <strong>Experience:</strong> <span>a year</span></li>
                 <li><i class="bi bi-house-door"></i> <strong>Company:</strong> <span><a href="https://hanbiro.vn/"> Hanbiro</a></span></li>
+                <li><i class="bi bi-pen"></i> <strong>Position:</strong> <span> Web Developer</span></li>
+                <li><i class="bi bi-person-workspace"></i> <strong>Experience:</strong> <span>2 year</span></li>
               </ul>
             </div>
           </div>
@@ -178,7 +178,21 @@
           <div class="col-xl-3 col-md-6 d-flex">
             <div class="service-item position-relative d-flex  align-items-center">
               <i class="bi bi-filetype-jsx"></i>
-              <h4>React JS</h4>
+              <h4>React</h4>
+            </div>
+          </div><!-- End Service Item -->
+
+          <div class="col-xl-3 col-md-6 d-flex">
+            <div class="service-item position-relative d-flex  align-items-center">
+              <i >A</i>
+              <h4>Angular JS</h4>
+            </div>
+          </div><!-- End Service Item -->
+
+          <div class="col-xl-3 col-md-6 d-flex">
+            <div class="service-item position-relative d-flex  align-items-center">
+              <i class="bi bi-filetype-php"></i>
+              <h4>PHP</h4>
             </div>
           </div><!-- End Service Item -->
           
